testsuite/tests/warnings/should_fail/T21865.hs
main :: IO ()
main = print {- ⁧⁦"Hello" ⁩⁦-} "Goodbye"
